# DistributedChronicleWeaver

./: README.md  REPORT.md  pyproject.toml
docker/: aggregator.Dockerfile  docker-compose.yml
k6/: benchmark.js
src/aggregator/app/: main.py
src/aggregator/app/models/: audit.py  events.py
src/aggregator/app/services/: __init__.py  consumer.py  database.py  redis_queue.py
src/publisher/app/: main.py
tests/: conftest.py  test_01_deduplication.py  test_02_persistence.py  test_03_concurrency.py  test_04_schema_validation.py  test_05_stats_consistency.py  test_06_events_consistency.py  test_07_batch_stress.py  test_08_race_condition.py  test_09_graceful_restart.py  test_10_out_of_order.py  test_11_retry_backoff.py  test_12_health_endpoints.py  test_13_transaction_isolation.py  test_14_batch_atomic.py  test_15_edge_cases.py  test_16_integration.py  test_17_audit_log.py
utils/: testing.py
