[project]
name = "DistributedChronicleWeaver"
version = "0.2.0"
description = "Distributed Publish-Subscribe Log Aggregator"
readme = "README.md"

requires-python = ">=3.14"
dependencies = [
  "fastapi[standard]>=0.120.0",
  "asyncpg>=0.30.0",
  "redis>=5.2.0",
  "pydantic>=2.12.3",
  "orjson>=3.11.4",
  "loguru>=0.7.3",
]

[dependency-groups]
dev = [
  "basedpyright>=1.32.1",
  "pytest>=8.4.2",
  "ruff>=0.14.2",
]
